--- a/CompletingPythonBasics_usingmodules_nestedLoop_Miscellaneous.ipynb
+++ b/CompletingPythonBasics_usingmodules_nestedLoop_Miscellaneous.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNBCEQDp8agCMOopph4T5xV"
+      "authorship_tag": "ABX9TyNgwMQB67wbuU9TJ9dG9WcS"
     },
     "kernelspec": {
       "name": "python3",
@@ -560,6 +560,384 @@
             "*\n",
             "*\n",
             "*\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#**Miscellaneous**\n",
+        "\n",
+        "we will learn about four small concepts:\n",
+        "\n",
+        "Assignment Operators\n",
+        "\n",
+        "None\n",
+        "\n",
+        "Truthy and Falsy\n",
+        "\n",
+        "pass Statement"
+      ],
+      "metadata": {
+        "id": "UWJJDy14gUcU"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "####Assignment Operators\n"
+      ],
+      "metadata": {
+        "id": "k5hAiUnUgnEo"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# assign 3.1415 to the pi variable\n",
+        "pi = 3.1415"
+      ],
+      "metadata": {
+        "id": "k8edrWrsgbIY"
+      },
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "+=\tx += 5\tx = x + 5\n",
+        "\n",
+        "-=\tx -= 5\tx = x - 5\n",
+        "\n",
+        "*=\tx *= 5\tx = x * 5\n",
+        "\n",
+        "/=\tx /= 5\tx = x / 5\n",
+        "\n",
+        "%=\tx %= 5\tx = x % 5\n",
+        "\n",
+        "//=\tx //= 5\tx = x // 5\n",
+        "\n",
+        "**= x **= 5\tx = x ** 5"
+      ],
+      "metadata": {
+        "id": "qz0miS2vgvJD"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "total = 100\n",
+        "\n",
+        "total += 10   # total = total + 10\n",
+        "print(total)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MoIfgNw2g4vH",
+        "outputId": "2bf05ebd-390f-4e61-d031-8b9db93d2cc6"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "110\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = 10\n",
+        "\n",
+        "x //= 4   # x = x // 4\n",
+        "print(x)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SorGZ2-3g8TC",
+        "outputId": "01e18807-9959-4c5f-d5ae-ae9683afe25a"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### None\n"
+      ],
+      "metadata": {
+        "id": "078nM_HPhBTy"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = None\n",
+        "print(x)    # None"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7rLr4LSChEY-",
+        "outputId": "43048681-93a9-45b6-c1ed-027fe8a73bc7"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "None\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def greet():\n",
+        "    print(\"Hey\")\n",
+        "\n",
+        "result = greet()\n",
+        "print(result)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ExUgegUthGl5",
+        "outputId": "27b13538-9459-447d-9baa-586d786370d0"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hey\n",
+            "None\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### Truthy and Falsy\n"
+      ],
+      "metadata": {
+        "id": "txflk0BKhJ8M"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = 5\n",
+        "\n",
+        "if x:\n",
+        "    print(x)   # 5"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZcWNiPi8hNaB",
+        "outputId": "1209f9ee-3fa5-4b30-ec5e-021de8511132"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = 0\n",
+        "\n",
+        "if x:\n",
+        "    print(x)\n",
+        "\n",
+        "# No output"
+      ],
+      "metadata": {
+        "id": "3Q1PXr_PhQNs"
+      },
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "In Python these values are considered falsy.\n",
+        "\n",
+        "None\n",
+        "\n",
+        "False\n",
+        "\n",
+        "0\n",
+        "\n",
+        "0.0\n",
+        "\n",
+        "empty strings, lists, dictionaries etc."
+      ],
+      "metadata": {
+        "id": "1zhP5E1zhUpQ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n1 = 20\n",
+        "n2 = 10\n",
+        "n3 = 30\n",
+        "\n",
+        "if n1 > n2 and n3:\n",
+        "    print(n1)\n",
+        "elif n2 > n1 and n3:\n",
+        "    print(n2)\n",
+        "else:\n",
+        "    print(n3)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hcaPbyauhZz3",
+        "outputId": "c763cf7a-0569-4722-b0f1-f4436c8cb904"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "20\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n = 10\n",
+        "if n == 10 and 100:\n",
+        "    print(\"Hello\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HjdD4K2yhjCR",
+        "outputId": "12b28cdc-729d-41e5-b894-7616c6b3df9f"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Here, n == 10 and 100 evaluates to True because both n == 10 and 100 evaluate to True. Thus, the print(\"Hello\") statement is executed."
+      ],
+      "metadata": {
+        "id": "DrYxt9qchhyD"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### pass Statement\n"
+      ],
+      "metadata": {
+        "id": "gT7Vob81hn4h"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n = 10\n",
+        "\n",
+        "if n > 10:\n",
+        "    # write code later\n",
+        "\n",
+        "print(\"Hello\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 106
+        },
+        "id": "2nPKcc8Lhqc9",
+        "outputId": "2b4b76e1-c241-4c1f-c7c9-0662f1271f7e"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "IndentationError",
+          "evalue": "expected an indented block after 'if' statement on line 3 (<ipython-input-23-07c4b85cd341>, line 6)",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-23-07c4b85cd341>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    print(\"Hello\")\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block after 'if' statement on line 3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n = 10\n",
+        "\n",
+        "# notice the use of pass inside the if statement\n",
+        "if n > 10:\n",
+        "    pass\n",
+        "\n",
+        "print(\"Hello\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "m3ICUpeehtvV",
+        "outputId": "7492678e-94a6-4672-b734-f27951a271d2"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello\n"
           ]
         }
       ]
