--- a/Projects.ipynb
+++ b/Projects.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPBilFCZm6/0gQOwsnQKHUU"
+      "authorship_tag": "ABX9TyMTiZazwzSQB8jL811o/+1a"
     },
     "kernelspec": {
       "name": "python3",
@@ -514,6 +514,71 @@
             "Computer's pick: rock\n",
             "Your pick: rock\n",
             "You draw\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Project : Number Guessing Game.**"
+      ],
+      "metadata": {
+        "id": "bUnQI1kqqw3y"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import random\n",
+        "n = random.randrange(1,1000)\n",
+        "guess = int(input(\"Enter any number between 1-1000: \"))\n",
+        "while n!= guess:\n",
+        "    if guess < n:\n",
+        "        print(\"Too low\")\n",
+        "        guess = int(input(\"Enter number again: \"))\n",
+        "    elif guess > n:\n",
+        "        print(\"Too high!\")\n",
+        "        guess = int(input(\"Enter number again: \"))\n",
+        "    else:\n",
+        "      break\n",
+        "print(\"you guessed it right!!\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nqYTuZCPq2IJ",
+        "outputId": "89507896-bb19-4f65-ee33-5beffe8bc80a"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter any number between 1-1000: 500\n",
+            "Too low\n",
+            "Enter number again: 700\n",
+            "Too low\n",
+            "Enter number again: 900\n",
+            "Too low\n",
+            "Enter number again: 999\n",
+            "Too high!\n",
+            "Enter number again: 950\n",
+            "Too low\n",
+            "Enter number again: 930\n",
+            "Too low\n",
+            "Enter number again: 980\n",
+            "Too high!\n",
+            "Enter number again: 970\n",
+            "Too low\n",
+            "Enter number again: 975\n",
+            "Too high!\n",
+            "Enter number again: 971\n",
+            "Too low\n",
+            "Enter number again: 972\n",
+            "you guessed it right!!\n"
           ]
         }
       ]
